--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <div class="contact_info" style="margin-top: 1%;">
           <img src="img\phone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
-          +916202999142
+          +9162029XXXXX2
 
         </div>
         </div>
